--- a/zeta.css
+++ b/zeta.css
@@ -340,7 +340,7 @@ article{
                 background-image: linear-gradient(360deg,white 85%, rgba(255, 255, 255, 0));}
             #adatok, #adatok2 {display: grid; grid-template-columns:repeat(2,50%); margin-bottom: 0%;}
                 .kapcs1 label {display:flex;
-                    padding: 0.5%;
+                    padding: 0.9%;
                                justify-content: right;
                                 margin-left: -6%;
                                 width: 200px;}
@@ -351,7 +351,7 @@ article{
                                 border-radius: 0px;
                                 box-shadow: inset black 0px 0.5px 2px 1px;   }
                
-                #adatok2 label{height: 25px;width: 200px;}
+                #adatok2 label{height: 25px;width: 200px; padding: 3% 0%;}
                 #adatok2 {padding: 3% 0%;
                         border-top: gold 1px solid;
                         border-top-right-radius: 40px;
