--- a/zeta.css
+++ b/zeta.css
@@ -56,7 +56,7 @@ header {
             margin-top: 13%;
             width: 30%;
             height: 30%;
-            background-image: url(./media/logo\ kör.png);}
+            background-image: url(./media/HEADER_NAV/logo\ kör.png);}
         .logo2_image {grid-area: supcont;
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -64,7 +64,7 @@ header {
                 margin-top:13%;
                 margin-left:-60.5%;
                 width: 37%;
-                background-image: url(./media/kvilogo.png);}
+                background-image: url(./media/HEADER_NAV/kvilogo.png);}
                 .currentmenu {font: bold 16px "Montserrat Subrayada" ;fill: rgb(255, 217, 0);filter: drop-shadow(-2px -3px 1px rgba(66, 4, 4, 0.068));}
                 .currentmenu1 {font: bold 12px "Montserrat Subrayada";fill: rgb(0, 0, 0);filter: drop-shadow(-2px -3px 1.6px rgba(255, 217, 0, 0.733));}
     .motto {grid-area: motto;}
@@ -77,24 +77,21 @@ header {
             display: grid;
             grid-template-columns: repeat(1,100%);
             grid-template-areas: "logocont";}
-            .circ1 {grid-area: logocont;}
+            .circ1 {grid-area: logocont;background-image: url(./media/HEADER_NAV/Lambdaweb.png);
+                background-size: 60%;
+                background-position: center;
+                background-repeat: no-repeat;}
                 .circ1 circle {transform-origin: 50px 50px;
                                 fill: none;
                                 stroke-width:2;
                                 stroke-dasharray: 40;
                                 animation: animateCircle1 60s  linear infinite;}
-            .circ2 {grid-area: logocont;}
-                .circ2 circle {transform-origin: 50px 50px;
-                                fill: none;
+            .circ2 {grid-area: logocont;
+                }
+                .circ2 circle {transform-origin: 50px 50px;fill: none;
                                 stroke-width:1;
                                 stroke-dasharray: 50;           
                                 animation: animateCircle2 35s  linear infinite;}
-            .third_image { grid-area: logocont;
-                        width: 40%;
-                            margin: 30% 0% 0% 30%;
-                            background-size: contain;
-                            background-image: url(./media/Orange_lambda-001.jpg);
-                            background-repeat: no-repeat;}
                                 @keyframes animateCircle1 {
                                     0% {transform: rotate(0deg);}
                                     100% {transform: rotate(360deg);}}
@@ -282,7 +279,7 @@ article{
 
     .logolanding .logo{width: 100%; margin: -15% 0% 0% 0%;}
     .circlanding{ 
-        background-image: url(./media/demo1kör.png);
+        background-image: url(./media/LANDINGPAGE/demo1kör.png);
         background-size:78%;
 
         background-position:center;
@@ -426,7 +423,7 @@ article{
             .szemely_contentI .cimke {width: 150px; height: fit-content;}
 
             .szemely_contentI .logo{ 
-                background-image: url(./media/BM.png);
+                background-image: url(./media/ROLUNK/BM.png);
                 background-size: 53%;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -466,7 +463,7 @@ article{
                     
         .szemely_contentII .cimke2 { width: 250px; margin-left: 200%;  height: fit-content;}
         
-        .szemely_contentII .logo{ background-image: url(./media/SM.png);
+        .szemely_contentII .logo{ background-image: url(./media/ROLUNK/SM.png);
                         background-size: 53%;
                         background-position: center;
                         background-repeat: no-repeat;
@@ -494,7 +491,7 @@ article{
             .szemely_contentIII .cimke {width: 150px; height: fit-content; margin: auto;}
 
             .szemely_contentIII .logo{ 
-                background-image: url(./media/SZP.jpg);
+                background-image: url(./media/ROLUNK/SZP.jpg);
                 background-size: 53%;
                 background-position: center;
                 background-repeat: no-repeat;
@@ -556,8 +553,7 @@ header {margin-top: 3%;}
             .heavy {font: bold 8px Montserrat Subrayada;fill: rgb(0, 0, 0);}
             .elegant {font: italic 2.95px serif;fill: black;}
         .logo {width: 60%;height: 60%;}
-                .third_image { margin: 28% 0% 0% 28%; width:50%;height:50%;}
-
+              
 .szakaszI{margin-top: -4%;}                
 footer {border-top: solid orange 2px; font-size: small; width: 99%;}
 /* kapcsolat */
@@ -574,7 +570,6 @@ header {margin-top: 7%;}
         .heavy {font: bold 8px Montserrat Subrayada;fill: rgb(0, 0, 0);}
         .elegant {font: italic 2.95px serif;fill: black;}
     .logo {width: 60%; height: 60%;}
-            .third_image { margin: 29% 0% 0% 29%; width:40%;height:40%;}
   
     .mobildropdown, .mobildropdown-content{
         width: 100%;
@@ -618,7 +613,6 @@ header {grid-template-columns: repeat(2,50%);
     .motto {width: 200%;}
     .supporters { width: 45%; margin-right: 0%; margin-top: 2%;}
     .logo {width: 60%; height: 60%;}
-        .third_image { margin: 0% 0% 0% 0%; width:100%;height:100%;}
 
 #indexhead {display: none;}
 
@@ -731,7 +725,7 @@ nav {display: flex;
                         margin: 3% 0% 0% -13%;
                         background-color: white;}
     .hamburger{
-        background-image: url(./media/Hamburger_icon.svg);
+        background-image: url(./media/HEADER_NAV/Hamburger_icon.svg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 55%;
