--- a/zeta.css
+++ b/zeta.css
@@ -130,7 +130,7 @@ nav {grid-area: nav;
             @keyframes currentnav {
                 0%   {background-color: gold;color: rgba(0, 0, 0, 0); }
                 100%   {background-color: white; color: black;}}
-a{color: black; background-color:black;}
+a{color: black; background-color:rgba(0, 0, 0, 0);}
     nav a:visited ,a:link{color: black;}
     nav a:hover,.dropdown:hover{
         box-shadow: inset 700px 0 0 0 orange; 
@@ -339,7 +339,7 @@ th {border: none;
     text-align:center;
     vertical-align: bottom;
     padding: 1%;
-    font-family:Montserrat Subrayada;}
+    font-family:Arial, Helvetica, sans-serif;}
 td{padding: 1%;border-left: gold 2px solid; border-radius: 15px;}
 
 .fuggoleges {border-right: gold 4px solid;
@@ -351,12 +351,8 @@ td{padding: 1%;border-left: gold 2px solid; border-radius: 15px;}
     width: 50px;
     height: 250px;}
 th span {
-  -ms-writing-mode: tb-rl;
-  -webkit-writing-mode: vertical-rl;
-  writing-mode: vertical-rl;
-  transform:rotate(180deg);
-  white-space: nowrap;}
-
+    writing-mode: vertical-rl;
+    text-orientation: upright;}
   caption {
     height: fit-content;
     display: flex;
@@ -374,6 +370,23 @@ th span {
     font-size: medium;
     font-style: italic;
 }
+
+/* TÉMÁK */
+
+.minipromo{font-style: italic; padding: 4%; text-align: center;}
+.minipromo img {width: 105%; margin: 10% 0%;} 
+.mini {width:150%; display: none;}
+.full  {animation: tema 2s  backwards; transition: transform 0.5s;}
+.full:hover {transform: scale(1.1);}
+@keyframes tema {
+    0% {transform:scale(3) translateX(200px);}
+    100% {transform: scale(1);}}
+
+h3 {font-family:Montserrat Subrayada;}
+h4 {font-style: italic; font-weight: 100;}
+ol{ list-style-type: upper-roman; float: left;}
+ul {list-style-type:georgian;}
+
 
 /* KAPCSOLAT */
 
@@ -686,6 +699,9 @@ footer {border-top: solid orange 2px; font-size: small; width: 99%;}
 
 .szemely_contentII .cimke2{margin: 0% 0% 0% 150%;}    
 
+/* TÉMÁK */
+.full {display: none;}
+.mini{display: block;}
 }
 
 @media screen and (min-width:490px) and (max-width:685px){
@@ -763,6 +779,10 @@ header {grid-template-columns: repeat(2,50%);
    .cardback{display: flex;
 justify-content: center;} 
 
+/* TÉMÁK */
+.full {display: none;}
+.mini{display: block;}
+
 /* VERZIÓK */
 
 .tablazat{display: none;}
@@ -774,15 +794,9 @@ justify-content: center;}
     border-bottom: black;
     vertical-align:middle;
     text-align: center;}
-th span {
-  writing-mode:horizontal-tb;
-  vertical-align:middle;
-  transform: rotate(0deg);
-  white-space: nowrap;}
-  
-th {vertical-align: middle; font-size: smaller; width: 120px;}
-
-
+th span { font-family: Arial;
+    writing-mode: vertical-rl;
+    text-orientation: upright;}
 }
 /* MOBILNÉZET */
 
@@ -851,8 +865,7 @@ nav {display: flex;
                 background-image: linear-gradient(120deg,white 60%, rgba(255, 255, 255, 0.548) 90%,white);     
                 animation-name: start;
                 animation-duration: 1s;  
-                animation-fill-mode: forwards;
-                } 
+                animation-fill-mode: forwards;} 
                     @keyframes start {
                         0%   {transform: translatex(-500px);}
                         100%   {transform:translatex(0px);}}       
@@ -863,9 +876,10 @@ nav {display: flex;
                   width: 90%;
                    border-radius: 0px;
                     text-align: center;}
-            .dropdown{transition: color 0.5s, box-shadow 2s;}
-            .dropdown:hover  {color: rgba(165, 42, 42, 0); box-shadow: inset 700px 0 0 0 orange;}
+            .dropdown{transition: color 0.1s, box-shadow 1s;}
+            .dropdown:hover  {color: gold; box-shadow: inset 700px 0 0 0 orange;}
             .dropdown-content {
+
                 width: fit-content;
                 height: fit-content;
                 margin: none;
@@ -876,7 +890,7 @@ nav {display: flex;
                 margin-left: -50%;
                 margin-bottom: -4%;
                 border-color: none;
-                background-color:rgba(240, 248, 255, 0);
+                background-color:orange;
                 border: none;
                 align-items: center;
                 width: 200%;}  
@@ -950,13 +964,10 @@ caption{font-size: small; padding: 2%; }
     border-bottom: black;
     vertical-align:middle;
     text-align: center;}
-th span {
-  writing-mode:horizontal-tb;
-  vertical-align:middle;
-  transform: rotate(0deg);
-  white-space: nowrap;}
-  
-th {vertical-align: middle; font-size: smaller; width: 120px;}
+th span { font-family: Arial;
+    writing-mode: vertical-rl;
+    text-orientation: upright;}
+
 /* RÓLUNK */
 
 .alcim{font-size: small; margin-left: -2%;}
@@ -1041,4 +1052,4 @@ th {vertical-align: middle; font-size: smaller; width: 120px;}
         border:none}  
         #confirm input{  margin-top: -10%; accent-color: black;}
     
-    }
+}
