--- a/zeta.css
+++ b/zeta.css
@@ -15,11 +15,15 @@ body {
     background-size: cover;
     background-attachment: fixed;
     min-width: 315px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-}
+    font-family:Georgia, 'Times New Roman', Times, serif;}
 
 /* FEJLÉC */
+
 #indexhead {display: none;}
+.kv {width: 150px;
+     background-color: rgba(0, 255, 255, 0);
+      position: relative;
+       margin:-110% 0% 65% -20%;}
 header {
     grid-area: header;
     height: 100%;
@@ -611,7 +615,9 @@ ul {list-style-type:georgian;}
 /* LÁBLÉC */
     
 footer {grid-area: footer;
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(6,16%);
+        grid-template-areas:"left center center center center right" ;
         padding:0.5%;
         width: 99%;
         margin: auto;
@@ -620,14 +626,23 @@ footer {grid-area: footer;
         font-size: small;
         font-weight: 600;
         color: rgb(0, 0, 0);  
-        background-color:rgb(255, 217, 0);}
+        background-color:rgb(255, 217, 0);
+        justify-items: center; justify-content: center; align-items: center; align-content: center;}
 footer a:visited ,a:link{color:rgb(255, 255, 255);}
-footer img {border: white 3px solid; grid-area: footer; border-radius: 100px; margin: auto;}
-#face {width: 2%; height:2%; padding:0.4%;box-shadow:inset black -1px -1px 3px 1px; }
-#tel {width: 2%; padding: 0.6%;box-shadow:inset black 1px 1px 3px 1px;}
-#mail  {width: 2%; height:2%; padding:0.4%;box-shadow:inset black -1px -1px 3px 1px; display: none; }
+footer p {grid-area: center;}
+footer img {border: white 3px solid; grid-area: footer; border-radius: 100px;}
+#face {grid-area: left; box-shadow:inset black -1px -1px 3px 1px; width: 40px; height: 40px; float: left; transition: transform 1s;}
+#face:hover {transform: scale(1.5);}
+#tel {grid-area: right; box-shadow:inset black 1px 1px 3px 1px;width: 40px; height: 40px; transition: transform 1s;}
+#tel:hover {transform: scale(1.5);}
+#mail  {grid-area: center; width: 40px; height:40px;box-shadow:inset black -1px -1px 3px 1px; display: none; transition: transform 1s;}
+#mail:hover {transform: scale(1.5);}
+#links {background-color: rgba(0, 0, 0, 0); }
+
+
 
 /* TÖRÉSPONTOK */
+
 
 @media screen and (min-width:900px) and (max-width:1350px){
 
@@ -818,7 +833,8 @@ header {position: sticky;
             -webkit-box-shadow:0px 1px 1px black;
             -moz-box-shadow:0px 1px 1px black;
             box-shadow:-10px 1px 9px black;    
-        border-bottom: 3px gold solid;                    }
+        border-bottom: 3px gold solid;}
+        .kv{display: none;}
         .motto {margin: 3% 0% 0% 17%;}
         .heavy1 {font: bold 12px Montserrat Subrayada ;fill: rgb(252, 227, 0);}/* font-family: 'Montserrat Subrayada', sans-serif; */
         .heavy {font: bold 11.1px Montserrat Subrayada;fill: rgb(0, 0, 0);}
@@ -914,12 +930,9 @@ section {margin: 5% 0.5% 3% 0.5%; display: flex; flex-direction: column;border: 
 
 /* FOOTER */
 
-footer {border-top: solid orange 2px; font-size: small; width: 99%; height: 100%;}
+footer {border-top: solid orange 2px; font-size: small; width: 99%; height: 100%; grid-template-columns: repeat(5,20%); grid-template-areas: "left center center center right";}
     footer p {display: none;}
-    footer img {border: white 3px solid; grid-area: footer; border-radius: 100px; margin: auto;}
-    #face {width: 7%; height:60%; padding:0.3%;box-shadow:inset black -1px -1px 3px 1px; }
-    #tel {width: 7%; padding: 0.6%;box-shadow:inset black 1px 1px 3px 1px;}
-    #mail {display: block; width:7.5%;height: 60%;}
+    #mail {display: flex; justify-content: center; justify-items: center; align-items: center;align-content: center;}
 
 /* LANDINDPAGE */
 
