--- a/kerek.css
+++ b/kerek.css
@@ -405,7 +405,7 @@ article{
                                 100% {visibility:visible;text-shadow: rgb(0, 0, 0) 5px 5px 5px;color: gold;}}
                                /*  .negyes:hover .info3{text-shadow: rgba(0, 0, 0, 0) 5px 5px 5px;color: rgba(255, 255, 255, 0);} */
 
-.info_mob, .info_mob0,.info_mob2,.tamop_mob {display: none;}
+.info_mob, .info_mob0,.info_mob2,.tamop_mob, .logobar p, .logobar span {display: none;}
 
 section {grid-area: slide;
     margin-left: auto;
@@ -620,9 +620,18 @@ footer{height: 50px;
     font-style: oblique;}
 
 @media(max-width:991px){
-       
+/* HEADER */
 
-
+ header{ margin-top:0%;box-shadow: rgb(11, 64, 88)  0px 0px 6px 8px;}
+  header .cim{display: none;}
+  .alcim {background: rgba(126, 225, 255, 0.178);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.9px);
+    -webkit-backdrop-filter: blur(3.9px);
+    color:rgb(255, 41, 41);
+    font-size: 24px;
+    text-align: center;
+  text-shadow: white -2px 0px 10px;}
 /* INTÉZMÉNY VÁLASZTÓ */
 
 .intezmenyvalaszto {margin: 1% auto 0% auto ;}
@@ -638,6 +647,7 @@ footer{height: 50px;
 /* SLIDER */
 
 .cimke, .cimke2{font-size: small; padding: 20px;width: 85%;}
+.cimke2 {margin-top: -1%;}
 
 #c1 , #c3{display: none;}
 #c2 {display: flex;
@@ -646,21 +656,21 @@ footer{height: 50px;
   width: 80%; height: 70%;
 transform: translateY(40px);}
 
-/* NAV */
+/* BODY */
+
 body {grid-template-areas: 
   "nav"
-  "header"
   "content"
+  "header"
   "slide"
   "tamop"
   "footer";}
 
-  header{ margin-top:-15%;}
-  header h1{display: none;}
+ /* NAV */
+
   .navcont{padding: 20px;
           box-shadow: rgb(38, 126, 126) 1px 1px 10px 1px;
-          display:flex;
-          }    
+          display:flex;}    
          /*  display: grid;
           grid-template-columns: repeat(5,20%);
           grid-template-areas: "logo menu menu menu menu"; */
@@ -689,8 +699,8 @@ body {grid-template-areas:
             .navcont .logo{width: 100%;}
             .logobar i  {display: none;}
             .logobar { position: absolute;}
-            .logo img {width: 30px;transform: translateX(150px);transition: all 1s;}
-            .logo img:hover{transform: translateX(150px);}
+            .logo img {width: 30px;transform: translateX(5px);transition: all 1s;}
+            .logo img:hover{transform: translateX(-5px);}
             #menu-bar2{position: relative;top: 40px;width: 40%;}
           #menu-bar2 svg{
           margin-top: -35px;
@@ -700,6 +710,13 @@ body {grid-template-areas:
           box-shadow: inset 0 0 10px 1px rgb(71, 145, 255), 0 0 10px 1px rgb(0, 255, 191);
          transform: translateY(28px);
             transition: all 1s;}
+            .logobar p{ background: #FFEDF1;
+              background: linear-gradient(to right, #FFEDF1 , #E8CA07 70%);
+              padding-left: 25px;
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
+              display: flex; font-size: 20px;}
+              .logobar span{display: flex; font-size: 12px; width: 55%; margin-left: 2%;}
 
 /* TAMOGATÁS */
 
